[gd_scene load_steps=4 format=3 uid="uid://dqkv257hsjlhn"]

[ext_resource type="Script" path="res://Dash/RotationRattle/knob.gd" id="1_juav0"]
[ext_resource type="Texture2D" uid="uid://wf2ydfdk8400" path="res://Dash/RotationRattle/knob-sheet.png" id="2_aabk8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6dlkd"]
radius = 12.0

[node name="Knob" type="Area2D"]
position = Vector2(30, 141.892)
script = ExtResource("1_juav0")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_aabk8")
region_enabled = true
region_rect = Rect2(0, 0, 21.1202, 18)

[node name="KnobHead" type="Sprite2D" parent="."]
position = Vector2(0, 1.108)
texture = ExtResource("2_aabk8")
offset = Vector2(0, -1)
region_enabled = true
region_rect = Rect2(21, 0, 19, 18)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6dlkd")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
